--- a/src/assets/css/components/theme-menu.scss
+++ b/src/assets/css/components/theme-menu.scss
@@ -1,9 +1,5 @@
 .site-theme-menu.mat-mdc-menu-panel {
   min-width: 14rem;
-  --mat-menu-item-label-text-size: 1rem;
-  --mat-menu-item-label-text-line-height: 1.5rem;
-  --mat-menu-item-label-text-weight: 400;
-  --mat-menu-item-label-text-tracking: 0;
 }
 
 .site-theme-menu-item.mat-mdc-menu-item {
@@ -11,8 +7,6 @@
   min-height: 3.25rem;
   cursor: pointer;
   pointer-events: auto;
-  font-size: 1rem;
-  font-weight: 400;
 }
 
 .site-theme-menu-item[aria-checked="true"] {
