--- a/src/assets/css/content/heading-links.scss
+++ b/src/assets/css/content/heading-links.scss
@@ -6,23 +6,5 @@ h5 > a.heading-link,
 h6 > a.heading-link {
   display: inline;
   font: inherit;
-  color: var(--site-text);
-  text-decoration: none;
-}
-
-h1 > a.heading-link.is-anchor-active,
-h2 > a.heading-link.is-anchor-active,
-h3 > a.heading-link.is-anchor-active,
-h4 > a.heading-link.is-anchor-active,
-h5 > a.heading-link.is-anchor-active,
-h6 > a.heading-link.is-anchor-active,
-h1 > a.heading-link:is(:hover, :focus-visible),
-h2 > a.heading-link:is(:hover, :focus-visible),
-h3 > a.heading-link:is(:hover, :focus-visible),
-h4 > a.heading-link:is(:hover, :focus-visible),
-h5 > a.heading-link:is(:hover, :focus-visible),
-h6 > a.heading-link:is(:hover, :focus-visible) {
-  text-decoration-line: underline;
-  text-decoration-thickness: from-font;
-  text-underline-offset: 0.12em;
+  color: inherit;
 }
